--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-rating-stars-component": "^2.2.0",
     "react-select": "^5.8.0",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
