--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroicons/react": "^2.1.1",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slider": "^1.1.2",
@@ -24,7 +23,7 @@
     "react-accessible-accordion": "^5.0.0",
     "react-alice-carousel": "^2.8.0",
     "react-dom": "^18",
-    "react-helmet": "^6.1.0",
+    "react-icons": "^5.0.1",
     "react-rating-stars-component": "^2.2.0",
     "react-select": "^5.8.0",
     "tailwind-merge": "^2.2.1",
@@ -36,7 +35,6 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/react-helmet": "^6.1.11",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
