--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.13.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-popover": "^1.0.7",
@@ -24,6 +25,7 @@
     "embla-carousel-react": "^8.0.0",
     "framer-motion": "^11.0.28",
     "lucide-react": "^0.343.0",
+    "mongodb": "^6.5.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
@@ -46,6 +48,7 @@
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.12",
+    "prisma": "^5.13.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
