--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@tanstack/react-query": "^5.36.0",
+    "@trpc/client": "^11.0.0-rc.366",
+    "@trpc/next": "^11.0.0-rc.366",
+    "@trpc/react-query": "^11.0.0-rc.366",
+    "@trpc/server": "^11.0.0-rc.366",
     "@uploadthing/react": "^6.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -40,6 +45,7 @@
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.0.1",
     "server-only": "^0.0.1",
+    "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.9.0",
