--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-fast-marquee": "^1.6.4",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.0.1",
+    "react-rating-stars-component": "^2.2.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.1",
