--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/nextjs": "^5.0.3",
     "@hookform/resolvers": "^3.3.4",
+    "@kinde-oss/kinde-auth-nextjs": "^2.2.10",
     "@prisma/client": "^5.13.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
