--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,7 @@
     "**/*.cjs",
     "**/*.js",
     ".next/types/**/*.ts",
-    "src/actions/getProductsBygetProductsByCategoryts"
+    "src/actions/*.ts"
   ],
   "exclude": ["node_modules"]
 }
