--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "hamburger-react": "^2.5.1",
     "lucide-react": "^0.379.0",
     "next": "^14.2.1",
+    "next-view-transitions": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
