--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "lucide-react": "^0.379.0",
     "next": "^14.2.1",
     "next-view-transitions": "^0.2.0",
+    "nextjs-toploader": "^1.6.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
