--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Topu99's Application1",
-  "name": "Topu99's Application1",
+  "short_name": "Furnit",
+  "name": "Furnit - Topu Roy",
   "icons": [
     {
       "src": "favicon.ico",
