--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-table": "^8.17.3",
     "@uploadthing/react": "^6.6.0",
+    "@vercel/analytics": "^1.3.1",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
